--- a/index.html
+++ b/index.html
@@ -22,14 +22,13 @@
       <hr />
       <h3>Weekly Assignments</h3>
       <ul>
-        <li><a href="week-2\Grashorn_exercise2.html">Exercise 2.2</a></li>
+        <li>Exercise 2.2</a></li>
         <li>Assignment 2.3</li>
         <li>Assignment 3.2</li>
         <li>Assignment 4.2</li>
         <li>Assignment 5.2</li>
         <li>Assignment 6.2</li>
         <li>Assignment 7.2</li>
-        <li>Assignment 8.2</li>
       </ul>
       <h3>Projects</h3>
       <ul>
