--- a/week-2/Grashorn_exercise2.html
+++ b/week-2/Grashorn_exercise2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WEB 231- Enterprise JavaScript I</title>
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="site.css" />
+    <link rel="stylesheet" href="global.css" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -28,6 +28,6 @@
         alert("WEB 231 - Enterprise JavaScript I");
       }
     </script>
-    <a href="index.html">Return</a>
+    <a href="../index.html">Return</a>
   </body>
 </html>
