--- a/week-2/Grashorn_exercise2.html
+++ b/week-2/Grashorn_exercise2.html
@@ -17,17 +17,25 @@
   </head>
   <body>
     <h1>Exercise 2.2 - Hello JavaScript</h1>
+
+    <!-- ===============
+      Button will show alert when clicked
+    ================ -->
     <button onclick="btnMyCourse()">What course am I taking?</button>
-    <p id="txtMyWorld"></p>
-    <script>
-      document.getElementById("txtMyWorld").innerHTML =
-        "You are now in Grashorn's world!";
-    </script>
     <script>
       function btnMyCourse() {
         alert("WEB 231 - Enterprise JavaScript I");
       }
     </script>
+    <!-- ===============
+      Paragraph will display the text
+    ================ -->
+    <p id="txtMyWorld"></p>
+    <script>
+      document.getElementById("txtMyWorld").innerHTML =
+        "You are now in Grashorn's world!";
+    </script>
+
     <a href="../index.html">Return</a>
   </body>
 </html>
