--- a/week-2/Grashorn_exercise2.html
+++ b/week-2/Grashorn_exercise2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WEB 231- Enterprise JavaScript I</title>
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="../global.css" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,7 +19,7 @@
     <h1>Exercise 2.2 - Hello JavaScript</h1>
 
     <!-- ===============
-      Button will show alert when clicked
+      Button will show alert when clicked 
     ================ -->
     <button onclick="btnMyCourse()">What course am I taking?</button>
     <script>
