--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Enterprise JavaScript I</title>
+    <title>WEB 231 - Enterprise JavaScript I</title>
     <!-- Stylesheet -->
     <link rel="stylesheet" href="site.css" />
     <!-- Google Fonts -->
@@ -24,7 +24,9 @@
       <ul>
         <li><a href="week-2\Grashorn_exercise2.html">Exercise 2.2</a></li>
         <li><a href="week-2\Grashorn_payroll.html">Assignment 2.3</a></li>
-        <li>Assignment 3.2</li>
+        <li>
+          <a href="week-3\grashorn-temp-conversion.html">Assignment 3.2</a>
+        </li>
         <li>Assignment 4.2</li>
         <li>Assignment 5.2</li>
         <li>Assignment 6.2</li>
