--- a/week-4/grashorn-number-game.html
+++ b/week-4/grashorn-number-game.html
@@ -85,10 +85,10 @@
           //random number
         } else if (myNumber < rnd) {
           document.getElementById("txtResults").innerHTML =
-            "This Number is greater than " + myNumber;
+            "The Number is greater than " + myNumber;
         } else if (myNumber > rnd) {
           document.getElementById("txtResults").innerHTML =
-            "This number is less than " + myNumber;
+            "The number is less than " + myNumber;
         } else {
           document.getElementById("txtResults").innerHTML =
             "Congratulations! You picked the correct number!";
