--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         </li>
         <li><a href="week-4\grashorn-number-game.html">Assignment 4.2</a></li>
         <li><a href="week-5\grashorn-sequence-game.html">Assignment 5.2</a></li>
-        <li>Assignment 6.2</li>
+        <li>
+          <a href="week-6\grashorn-in-n-out-books.html">Assignment 6.2</a>
+        </li>
         <li>Assignment 7.2</li>
       </ul>
       <h3>Projects</h3>
