--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li>
           <a href="week-6\grashorn-in-n-out-books.html">Assignment 6.2</a>
         </li>
-        <li>Assignment 7.2</li>
+        <li><a href="week-7\grashorn-javazon.html">Assignment 7.2</a></li>
       </ul>
       <h3>Projects</h3>
       <ul>
