--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <a href="week-6\grashorn-in-n-out-books.html">Assignment 6.2</a>
         </li>
         <li><a href="week-7\grashorn-javazon.html">Assignment 7.2</a></li>
+        <li><a href="week-8\grashorn-alphabet-game.html">Assignment 8.2</a></li>
       </ul>
       <h3>Projects</h3>
       <ul>
