--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
       <h3>Projects</h3>
       <ul>
         <li>Final: Card Game</li>
-        <li><a href="../bioSite/index.html">bioSite Project Home Page</a></li>
+        <li>
+          <a href="https://bgrashorn.github.io/bioSite/"
+            >bioSite Project Home Page</a
+          >
+        </li>
       </ul>
       <h4>Important Links</h4>
       <ul>
