--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </ul>
       <h3>Projects</h3>
       <ul>
-        <li>Final: Card Game</li>
+        <li><a href="week-9\grashorn-card-game.html">Final: Card Game</a></li>
         <li>
           <a href="https://bgrashorn.github.io/bioSite/"
             >bioSite Project Home Page</a
