--- a/week-9/grashorn-card-game.html
+++ b/week-9/grashorn-card-game.html
@@ -12,6 +12,7 @@
 ;              Web 231 HTML, CSS, and JavaScript Requirements,
 ;              W3Schools JavaScript Reference - HTML DOM Input Number Object,
 ;              W3Schools - JavaScript Functions
+;              Pictogrammers.github.io
 ;              Google Fonts.  
 =============================================================
 -->
@@ -26,6 +27,11 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="../global.css" />
     <link rel="stylesheet" href="../week-9/grashorn.card-game.css" />
+    <!-- Icons Reference -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css"
+    />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -47,8 +53,11 @@
     <!-- Output Div -->
     <div class="card">
       <div class="card-title">Shuffled Cards</div>
-      <div class="card-content"></div>
+      <div class="card-content">
+        <div id="playerCardContainer"></div>
+      </div>
     </div>
+    <!-- JavaScript -->
     <script>
       class Card {
         constructor(face, suit) {
@@ -58,6 +67,9 @@
       }
 
       class Dealer {
+        constructor() {
+          this.getDeckOfCards();
+        }
         // variable to hold the number of cards in a deck
         CARD_COUNT = 52;
         // empty array to store the generated card deck
@@ -81,20 +93,76 @@
         // an array to hold the suits in a card deck
         suits = ["Hearts", "Diamonds", "Clubs", "Spades"];
 
-        constructor() {
-          this.getDeckOfCards();
+        getDeckOfCards() {
+          for (let count = 0; count < this.CARD_COUNT; count++) {
+            this.cards[count] = new Card(
+              this.faces[count % 13],
+              this.suits[Math.floor(count / 13)]
+            );
+          }
         }
 
-        getDeckOfCards() {
-          for (let i = 0; i < this.CARD_COUNT; i++) {
-            this.cards[i] = {
-              face: this.faces[i % 13],
-              suit: this.suits[Math.floor(i / 13)],
-            };
+        shuffle() {
+          for (let firstCard = 0; firstCard < this.CARD_COUNT; firstCard++) {
+            let secondCard = Math.floor(Math.random() * this.CARD_COUNT);
+            let tempCard = this.cards[firstCard];
+            let currentCard = secondCard;
+            secondCard = tempCard;
           }
-          return this.cards;
+        }
+
+        buildPlayingCard(card, suitIcon, faceColor, suitColor) {
+          return `<div class="card player-card">
+                    <div class="card-title" style="text-align: left; font-size: 20px; padding-left: 10px; color: ${faceColor}">${card.face}</div>
+                    <div class="card-content" style="font-size: 28px; padding-bottom: 25px;"><span class="${suitIcon}" style="color: ${suitColor}"></span></div>
+                  </div>`;
         }
       }
+
+      document.getElementById("btnDealCards").onclick = function () {
+        let dealer = new Dealer();
+        dealer.shuffle();
+        let cardOutputWithIcon = "";
+
+        for (const card of dealer.cards) {
+          switch (card.suit) {
+            case "Hearts":
+              cardOutputWithIcon += dealer.buildPlayingCard(
+                card,
+                "mdi mdi-cards-heart",
+                "red",
+                "red"
+              );
+              break;
+            case "Diamonds":
+              cardOutputWithIcon += dealer.buildPlayingCard(
+                card,
+                "mdi mdi-cards-diamond",
+                "red",
+                "red"
+              );
+              break;
+            case "Clubs":
+              cardOutputWithIcon += dealer.buildPlayingCard(
+                card,
+                "mdi mdi-cards-club",
+                "black",
+                "black"
+              );
+              break;
+            case "Spades":
+              cardOutputWithIcon += dealer.buildPlayingCard(
+                card,
+                "mdi mdi-cards-spade",
+                "black",
+                "black"
+              );
+              break;
+          }
+        }
+        document.getElementById("playerCardContainer").innerHTML =
+          cardOutputWithIcon;
+      };
     </script>
   </body>
 </html>
